# dicelib

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  publish_on_pypi.yml
dicelib/: Tsf.pyx  __init__.py  blur.py  clustering.py  clustering.pyx  connectivity.pxd  connectivity.pyx  connectome_blur.pyx  coords_transf.pyx  create_structure_2_levels.py  header.py  image.pyx  info.py  lazytck.pyx  lazytractogram.pxd  lazytractogram.pyx  pyproject.toml  smoothing.c  smoothing.pyx  smoothing_speed.pyx  split_cluster.pyx  streamline.hpp  streamline.pxd  streamline.pyx  tcz.pyx  tractogram.hpp  tractogram.pxd  tractogram.pyx  tsf.pyx  ui.py  utils.py
dicelib/include/: float16_float32_encode_decode.hpp  streamline.hpp  streamline_utils.hpp
dicelib/scripts/: dice_connectome.py  dice_image.py  dice_tractogram.py
dicelib/tractogram/: Catmull.h  __init__.py  clustering.py  lazytck.pyx  processing.pyx  processing_c.cpp
src/: ui.py
tests/: blur_test.py  file_converter_test.py  header_test.py  tcz_read_streamline_test.py  tcz_test.py
tests/dicelib/mock/: 25_26_converted_spline.tcz  25_26_restored.tck  demo_fibers.tck  demo_fibers.tcz  demo_fibers_no_polyline.tcz  demo_fibers_no_segment_len.tcz  demo_fibers_read_streamline.tcz  demo_fibers_smoothed.tcz  demo_fibers_streamline_control_points.tcz  demo_fibers_streamline_rdp.tcz  demo_fibers_streamline_spline.tcz  demo_fibers_to_smooth.tcz  demo_fibers_write.tcz  demo_fibers_write_streamline.tcz  one_streamline_converted.tcz  one_streamline_converted_rdp_with_epsilon_greater_than_zero.tcz  one_streamline_converted_spline.tcz  one_streamline_converted_with_epsilon_greater_than_zero.tcz  one_streamline_converted_with_epsilon_greater_than_zero_and_little_segment_len.tcz  one_streamline_only.tck
tests/dicelib/mock/invalid/: invalid_blur_core_extent.tcz  invalid_blur_gauss_extent.tcz  invalid_blur_gauss_min.tcz  invalid_blur_spacing.tcz  invalid_representation.tcz  invalid_streamline_representation.tcz  no_blur_core_extent.tcz  no_blur_gauss_extent.tcz  no_blur_gauss_min.tcz  no_blur_spacing.tcz
