[build-system]
requires = [
    "setuptools>=68.1.0",
    "Cython>=3.0.8",
    "numpy>=1.24.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dmri-dicelib"
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "Cython>=3.0.8",
    "dipy>=1.8.0"
]
requires-python = ">=3.8"
authors = [
    {name = "DICE Lab", email = "DICE_lab@strutture.univr.it"}
]
maintainers = [
    {name = "DICE Lab", email = "DICE_lab@strutture.univr.it"}
]
description = "Software library of the DICE Lab (Diffusion Imaging and Connectivity Estimation Laboratory)"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "Neuroimaging"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: Other/Proprietary License",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/dice-lab-vr/dicelib.git"
Documentation = "https://github.com/dice-lab-vr/dicelib/blob/master/README.md"
Repository = "https://github.com/dice-lab-vr/dicelib.git"
Issues = "https://github.com/dice-lab-vr/dicelib/issues"
Changelog = "https://github.com/dice-lab-vr/dicelib/blob/master/CHANGELOG.md"

[tool.setuptools]

